# mockie-cli

./: Cargo.toml  INSTALL.md  README.md  install.bat  install.py  install.sh  routes.json
src/: config.rs  error.rs  lib.rs  main.rs  server.rs
src/cli/: commands.rs  mod.rs
src/handlers/: admin.rs  mock_handler.rs  mod.rs
src/models/: mod.rs  route_config.rs
src/storage/: file_storage.rs  mod.rs
