[package]
name = "mockie"
version = "0.2.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "🎭 Mock HTTP server configurable por CLI"
license = "MIT"
repository = "https://github.com/yourusername/mockie"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.8"
